--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Resources#index</h1>
-<p>Find me in app/views/resources/index.html.erb</p>
+<!--
+Contact AFD
+-->
+<div class="column-wrapper">   
+    <div class="column-full">
+        <h1>Learn</h1>
+    </div><!--end column-full-->
+    <div class="column-full reg">
+       <div class="column reg">
+            <h2>What is the <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">Wildland Urban Interface?</a></h2>
+            <p>A <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">wildland–urban interface</a> refers to the zone of transition between unoccupied land and human development. Communities that are within 0.5 miles (0.80 km) of the zone may also be included. These lands and communities adjacent to and surrounded by wildlands are at risk of wildfires.</p>
+            <h2><a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a></h2>
+            <p>Austin and the Texas Forest Service (check) have produced the <a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a> guide to help you prepare and respond during emergency situations. Read the <a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a> PDF and make sure you've taken steps to avoid and prepare for emergencies. 
+            </p>
+        </div>
+        <div class="column reg">
+            <h2>Texas Forest Service <a href="http://www.texaswildfirerisk.com">TxWRAP</a></h2>
+            <p>Find out more about locations in the Wildland Urban Interface, review detailed landscape characteristics, historical weather patterns and more.</p>
+            <h2>Ready, Set, Go! <a href="http://www.youtube.com/watch?v=MN8Kre62nz4">How To video</a></h2>
+            <p>Watch a <a href="http://www.youtube.com/watch?v=1EtXNUeBG8M">short introductory video</a> illustrating the devastating speed of wildfires driven by winds and flying embers.
+</p>
+        </div>
+    </div><!--end column-full-->    
+    <div class="column-full reg">
+        <h1>Alerts</h1>
+    </div> <!--end column-full-->
+    <div class="column-full">
+        <div class="column reg">
+            <h2>Local Conditions</h2>
+            <p>Prepared.ly is meant to help you remain proactive by sending periodic, unobstrusive notifications. Stay tuned for alerts from AFD when there is a high wildfire risk due to weather or other circumstances, and for reminders of simple ways to remain prepared. You can set your alert preferences <a href="http://www.prepared.ly/users/edit">here</a>.
+            </p>  
+        </div>
+        <div class="column reg">
+            <h2>Contact AFD</h2>
+                <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. Send an email <a href="mailto:Josh.Portie@austintexas.gov">here</a>.
+                </p>   
+        </div>  
+     </div> <!--end column-full-->    
+</div> <!--end column wrapper-->
