--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -431,8 +431,8 @@ td { vertical-align: top; }
 }
 
 .column-wrapper {
-	margin:10px;
-	padding:10px;
+/*	margin:10px;
+	padding:10px;*/
 }
 .column {
 	float:left;
@@ -480,7 +480,6 @@ td { vertical-align: top; }
 }
 .column-full {
 	width:100%;
-	position: relative;
 }
 #skyline {	
 	background: url('footer.png') no-repeat;
@@ -500,6 +499,42 @@ td { vertical-align: top; }
 	top:-36px;
 	position:relative;
 	}
+
+/*-------------------------------------------------reg-two-column-page ---*/
+.reg h1{
+	font-size: 48px;
+	font-style: normal;
+	font-weight: 700;
+	color: #99CCCC;
+	text-align:center;
+	border-bottom:solid 1px #99CCCC;
+	line-height:50px;
+}
+.reg h3{
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 300;
+	color: #339999;
+	text-align:center;
+    top: -35px;
+    position: relative;
+    line-height:25px;
+}
+
+
+.reg p, .reg h2 {
+	margin:5px;
+	padding:5px;
+	}
+.reg p{
+	height: 100px;
+	color:#666666;
+}
+
+.reg h2{
+	font-weight: 700;
+	color:#666666;
+}
 
 /*------------------------------------------------contact form---*/
 
