--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,8 +53,8 @@
 					<a href="http://www.codeforamerica.org"><img title="cfa austin" src="/assets/cfaaustin.png"></a>
 				</div>
 				<div class="column-3">
-				<p> contact us: <a href="info@prepared.ly">info@prepared.ly</a></br>
-						check out our resources, </br>and partners, <a href="">here</a>.
+				<p> contact us: <a href="mailto:info@prepared.ly">info@prepared.ly</a></br>
+						check out our resources, </br>and partners, <a href="../resources">here</a>.
 					</p>
 				</div>
 				<div class="column-3">
