Updated copy and some links in user welcome email html and text

--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,6 +1,10 @@
 Welcome to prepared.ly, <%= @user.first_name %>
 ===============================================
  
-To login to the site, just follow this link: <%= @url %>.
- 
-Thanks for joining and have a great day!
+Login to the site at <% url %> to adjust your alert preferences, view weather-based risk, find resources and contact a wildfire specialist.
+
+Tell your neighbors and friends across town about Prepared.ly by sharing this link: <% @referral_url %></li>
+        
+Visit <% survey %> to help assess your preparedness and improve our services.  Please email additional feedback and suggestions to info@prepared.ly.  
+
+Thanks for signing up!
