--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,17 +6,18 @@
   <body>
     <p><%= image_tag attachments['preparedly-red.png'].url -%></p>
     <h1>Welcome to Prepared.ly!</h1>
-    <p><em>Thanks for joining and helping keep your neighborhood safe. Get started by</em></p>
+    <p><h2>Thanks for signing up. Get started by</h2></p>
     <ol>
-      <li><p>To login to the site and adjust your notification preferences, just follow this link: <%= @url %>. You'll also find fire danger forecasts, tips and tasks.</p></li>
-      <li><p>Tell your neighbors and friends across town about Prepared.ly!</p>
+      <li><p>Login to the site at <% @url %> to adjust your alert preferences, view weather-based risk, find resources and contact a wildfire specialist.</p></li>
+      <li><p>Tell your neighbors and friends across town about Prepared.ly:</p>
         <ul>
-          <li>Share on Facebook</li>
-          <li>Post on Tumblr</li>
-          <li>Tweet!</li>
+          <li>Share this link: <% @referral_url %></li>
+          <li>Discuss on <a href="http://www.facebook.com">Facebook</a></li>
+          <li>Post on <a href="http://www.tumblr.com">Tumblr</a></li>
+          <li>Share on <a href="http://www.twitter.com"> Twitter</a></li>
         </ul>
       </li> 
-      <li><p>Help us make Prepared.ly most helpful to you. We've created a short survey <a href="http://prepared.ly/survey">here</a> or you can <a href="mailto:info@prepared.ly">email us</a> any feedback.</p></li>
+      <li><p>Visit <% survey %> to help assess your preparedness and improve our services.  Please <a href="mailto:info@prepared.ly">email us</a> your feedback and suggestions.</p></li>
     </ol>
   </body>
 </html>
