--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -17,7 +17,7 @@
           <li>Share on <a href="http://www.twitter.com"> Twitter</a></li>
         </ul>
       </li> 
-      <li><p>Visit <% survey %> to help assess your preparedness and improve our services.  Please <a href="mailto:info@prepared.ly">email us</a> your feedback and suggestions.</p></li>
+      <li><p>Visit <% @survey %> to help assess your preparedness and improve our services.  Please <a href="mailto:info@prepared.ly">email us</a> your feedback and suggestions.</p></li>
     </ol>
   </body>
 </html>
