--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -8,7 +8,7 @@
     <h1>Welcome to Prepared.ly!</h1>
     <p><h2>Thanks for signing up. Get started by</h2></p>
     <ol>
-      <li><p>Login to the site at <% @url %> to adjust your alert preferences, view weather-based risk, find resources and contact a wildfire specialist.</p></li>
+      <li><p><a href="users/sign_in">Sign in</a> to adjust your alert preferences, view weather-based risk, find resources and contact a wildfire specialist.</p></li>
       <li><p>Tell your neighbors and friends across town about Prepared.ly:</p>
         <ul>
           <li>Share this link: <% @referral_url %></li>
@@ -17,7 +17,7 @@
           <li>Share on <a href="http://www.twitter.com"> Twitter</a></li>
         </ul>
       </li> 
-      <li><p>Visit <% @survey %> to help assess your preparedness and improve our services.  Please <a href="mailto:info@prepared.ly">email us</a> your feedback and suggestions.</p></li>
+      <li><p>Use our <a href="http://prepared.ly/survey">survey</a> to help assess your preparedness and improve our services.  Please <a href="mailto:info@prepared.ly">email us</a> your feedback.</p></li>
     </ol>
   </body>
 </html>
