--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <p><%= image_tag attachments['preparedly-red.png'].url -%></p>
     <h1>Welcome to Prepared.ly!</h1>
-    <p><h2>Thanks for signing up. Get started by</h2></p>
+    <p><h2>Thanks for signing up. Get started:</h2></p>
     <ol>
       <li><p><a href="users/sign_in">Sign in</a> to adjust your alert preferences, view weather-based risk, find resources and contact a wildfire specialist.</p></li>
       <li><p>Tell your neighbors and friends across town about Prepared.ly:</p>
