--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,8 +24,8 @@
   <div><%= f.label :address %><br />
   <%= f.text_field :address %></div>
 
-  <div><%= f.label 'Notify by SMS' %><br />
-  <%= f.check_box :preferred_contact %></div>
+  <div><%= f.label 'Check to receive SMS notifications' %><br />
+  <%= f.check_box :sms_opt_in %></div>
 
   <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
   <%= f.password_field :password, :autocomplete => "off" %></div>
