--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,32 @@
       })();
 
     </script>
+<script type="text/javascript" charset="utf-8">
+  var is_ssl = ("https:" == document.location.protocol);
+  var asset_host = is_ssl ? "https://d3rdqalhjaisuu.cloudfront.net/" : "http://d3rdqalhjaisuu.cloudfront.net/";
+  document.write(unescape("%3Cscript src='" + asset_host + "javascripts/feedback-v2.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+
+<script type="text/javascript" charset="utf-8">
+  var feedback_widget_options = {};
+
+  feedback_widget_options.display = "overlay";  
+  feedback_widget_options.company = "code_for_america";
+  feedback_widget_options.placement = "right";
+  feedback_widget_options.color = "#333333";
+  feedback_widget_options.style = "question";
+  feedback_widget_options.product = "code_for_america_preparedly";
+  feedback_widget_options.tag = "feedback";
+  
+  feedback_widget_options.custom_css = "feedback.css";
+  
+  feedback_widget_options.limit = "3";
+  
+
+  var feedback_widget = new GSFN.feedback_widget(feedback_widget_options);
+</script>
+
+
 </head>
 <body>
 <div id="wrap">
