--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -11,7 +11,7 @@
       <li><p><a href="<%= @url %>">Sign in</a> to adjust your alert preferences, view weather-based risk, find resources and contact a wildfire specialist.</p></li>
       <li><p>Tell your neighbors and friends across town about Prepared.ly:</p>
         <ul>
-          <li><a href="<%= @referral_url %>">Share this link</a></li>
+          <li><a href="<%= @share_url %>">Share this link</a></li>
           <li><a href="<%= @facebook_share %>">Discuss on Facebook</a></li>
           <li><a href="<%= @tumblr_share %>">Post on Tumblr</a></li>
           <li><a href="<%= @twitter_share %>">Share on Twitter</a></li>
