--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -6,7 +6,7 @@
 
 <%= form_tag("/map", :method=> "post") do %>
 <h2> Welcome. </h2>
-    <%= text_field_tag(:q, nil,  :placeholder => 'enter your address here to get started', :class => 'address') %>
+    <%= text_field_tag(:q, nil,  :placeholder => 'enter your street address to get started', :class => 'address') %>
     <%= submit_tag("Locate", :class => 'blue button') %>
 
 <% end %>
