--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -10,16 +10,18 @@
     <li><%= link_to "about", about_path %></li>
 <% end %>
 <div id="map-main">
-<div id="map-content-top">
-    <div id="address-map">
-<%= form_tag("/map", :method=> "post") do%>
-    <%= text_field_tag(:q, nil,  :value => @address.address, :class => 'address') %>
-    <%= submit_tag("Locate", :class => 'blue button') %>
-<% end %>
-    </div>
-</div>
-<div>
-  <div id="map-detail">
+  <div id="map-content-top">
+      <div id="address-map">
+        <%= form_tag("/map", :method=> "post") do%>
+          <%= text_field_tag(:q, nil,  :value => @address_str, :class => 'address') %>
+          <%= submit_tag("Locate", :class => 'blue button') %>
+        <% end %>
+      </div>
+  </div>
+
+  <% if @coordinates %>
+  <div>
+    <div id="map-detail">
         <table id="table-map">
             <tr>
                 <th colspan="2">
@@ -62,63 +64,67 @@
                     <a href="users/sign_up"><button class="blue button signup big">sign up now >></button></a>
                 </td>
             </tr>
-    </table>
-       
+      </table>
+      </div>
     </div>
+    <!-- div that will display the map that is set using below javascript -->
+    <div id="map"></div>
   </div>
-  <!-- div that will display the map that is set using below javascript -->
-  <div id="map"></div>
-</div>
+  <% else %>
+  <div>Please enter a valid street address and try again.</div>
+  <% end %>
 </div>
 <% content_for :javascript_yield do %>
-<!-- scripts -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
-<script type="text/javascript" src="http://vizzuality.github.com/cartodb-leaflet/wax.leaflet.min.js"></script>
-<script type="text/javascript" src="http://vizzuality.github.com/cartodb-leaflet/cartodb-leaflet.js"></script>
-<script type="text/javascript">
-    $(document).ready(function() {
+  <!-- scripts -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
+  <script type="text/javascript" src="http://vizzuality.github.com/cartodb-leaflet/wax.leaflet.min.js"></script>
+  <script type="text/javascript" src="http://vizzuality.github.com/cartodb-leaflet/cartodb-leaflet.js"></script>
+  <% if @coordinates %>
+    <script type="text/javascript">
+        $(document).ready(function() {
 
-      stamenTilesWithStations();
+          stamenTilesWithStations();
 
-      function stamenTilesWithStations() {
+          function stamenTilesWithStations() {
 
-        // make a map, using normal leaflet and stamen toner tiles
-        var map = new L.Map('map', {maxZoom: 18});
-        var mapCenter = new L.LatLng(<%= @address.latlon.y %>, <%= @address.latlon.x %>);
-        var mapZoom = 12;
-        var baseUrl = 'http://{s}.tile.stamen.com/terrain/{z}/{x}/{y}.jpg',
-            attrib = 'Map tiles by Stamen',
-            baseLayer = new L.TileLayer(baseUrl, {attribution: attrib, maxZoom:18});
-        map.addLayer(baseLayer);
+            // make a map, using normal leaflet and stamen toner tiles
+            var map = new L.Map('map', {maxZoom: 18});
+            var mapCenter = new L.LatLng(<%= @address.latlon.y %>, <%= @address.latlon.x %>);
+            var mapZoom = 12;
+            var baseUrl = 'http://{s}.tile.stamen.com/terrain/{z}/{x}/{y}.jpg',
+                attrib = 'Map tiles by Stamen',
+                baseLayer = new L.TileLayer(baseUrl, {attribution: attrib, maxZoom:18});
+            map.addLayer(baseLayer);
 
-        var tx_burn_ban_counties = new L.CartoDBLayer({
-        show_cartodb_logo: false,
-        map_canvas: 'map',
-        map: map,
-        user_name:'tinio',
-        table_name: 'cntys04',
-        query: "SELECT cartodb_id, the_geom_webmercator FROM {{table_name}} WHERE name in (<%= @counties_list %>)",
-        infowindow: "SELECT cartodb_id, name_locas FROM {{table_name}} WHERE cartodb_id={{feature}}",
-        auto_bound: false 
+            var tx_burn_ban_counties = new L.CartoDBLayer({
+            show_cartodb_logo: false,
+            map_canvas: 'map',
+            map: map,
+            user_name:'tinio',
+            table_name: 'cntys04',
+            query: "SELECT cartodb_id, the_geom_webmercator FROM {{table_name}} WHERE name in (<%= @counties_list %>)",
+            infowindow: "SELECT cartodb_id, name_locas FROM {{table_name}} WHERE cartodb_id={{feature}}",
+            auto_bound: false 
+            });
+
+            var homeMarker = new L.Marker(new L.LatLng(<%= @address.latlon.y %>, <%= @address.latlon.x %>));
+            map.addLayer(homeMarker);
+            map.setView(mapCenter, mapZoom);
+
+            var austin_fire_stations = new L.CartoDBLayer({
+            show_cartodb_logo: false,
+            map_canvas: 'map',
+            map: map,
+            user_name:'tinio',
+            table_name: 'afd_station_location',
+            query: "SELECT cartodb_id, the_geom_webmercator FROM {{table_name}} WHERE cartodb_id=<%= @cfs.id %>",
+            infowindow: "SELECT cartodb_id, address FROM {{table_name}} WHERE cartodb_id={{feature}}",
+            auto_bound: false 
+            });
+
+          }
         });
-
-        var homeMarker = new L.Marker(new L.LatLng(<%= @address.latlon.y %>, <%= @address.latlon.x %>));
-        map.addLayer(homeMarker);
-        map.setView(mapCenter, mapZoom);
-
-        var austin_fire_stations = new L.CartoDBLayer({
-        show_cartodb_logo: false,
-        map_canvas: 'map',
-        map: map,
-        user_name:'tinio',
-        table_name: 'afd_station_location',
-        query: "SELECT cartodb_id, the_geom_webmercator FROM {{table_name}} WHERE cartodb_id=<%= @cfs.id %>",
-        infowindow: "SELECT cartodb_id, address FROM {{table_name}} WHERE cartodb_id={{feature}}",
-        auto_bound: false 
-        });
-
-      }
-    });
-</script>
+    </script>
+  <% end %>
 <% end %>
