[delivers #29291437]display distance to fire station in miles

--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -50,7 +50,7 @@
             </tr>
             <tr>
                 <td class="condition-type">Distance to fire station:</td>
-                <td class="condition"> <%= @distance %> meters</td>
+                <td class="condition"> <%= @distance %> miles</td>
             </tr>
             <tr>
                 <td class="condition-type">Inside of a Burn Ban:</td>
