add and change links to carto js files

--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -80,8 +80,8 @@
   <!-- scripts -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
-  <script type="text/javascript" src="http://vizzuality.github.com/cartodb-leaflet/wax.leaflet.min.js"></script>
-  <script type="text/javascript" src="http://vizzuality.github.com/cartodb-leaflet/cartodb-leaflet.js"></script>
+  <script type="text/javascript" src="app/assets/javascripts/wax.leaflet.min.js"></script>
+  <script type="text/javascript" src="app/assets/javascripts/cartodb-leaflet.js"></script>
   <% if @coordinates %>
     <script type="text/javascript">
         $(document).ready(function() {
