--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -8,17 +8,21 @@ Contact AFD
     <div class="column-full reg">
        <div class="column reg">
             <h2>What is the <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">Wildland Urban Interface?</a></h2>
-            <p>A <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">wildland–urban interface</a> refers to the zone of transition between unoccupied land and human development. Communities that are within 0.5 miles (0.80 km) of the zone may also be included. These lands and communities adjacent to and surrounded by wildlands are at risk of wildfires.</p>
+                <p>A <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">wildland–urban interface</a> refers to the zone of transition between unoccupied land and human development. Communities that are within 0.5 miles (0.80 km) of the zone may also be included. These lands and communities adjacent to and surrounded by wildlands are at risk of wildfires.</p>
             <h2><a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a></h2>
-            <p>Austin and the Texas Forest Service (check) have produced the <a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a> guide to help you prepare and respond during emergency situations. Read the <a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a> PDF and make sure you've taken steps to avoid and prepare for emergencies. 
-            </p>
+                <p>Austin and the Texas Forest Service (check) have produced the <a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a> guide to help you prepare and respond during emergency situations. Read the <a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a> PDF and make sure you've taken steps to avoid and prepare for emergencies. 
+                <br />
+                <br />
+                Watch this <a href="http://www.youtube.com/watch?v=1EtXNUeBG8M">short introductory video</a> illustrating the devastating speed of wildfires driven by winds and flying embers and <a href="http://www.youtube.com/watch?v=MN8Kre62nz4">How To video</a>the Ready, Set, Go how-to video</a> to start preparing your home.</p>
         </div>
         <div class="column reg">
             <h2>Texas Forest Service <a href="http://www.texaswildfirerisk.com">TxWRAP</a></h2>
-            <p>Find out more about locations in the Wildland Urban Interface, review detailed landscape characteristics, historical weather patterns and more.</p>
-            <h2>Ready, Set, Go! <a href="http://www.youtube.com/watch?v=MN8Kre62nz4">How To video</a></h2>
-            <p>Watch a <a href="http://www.youtube.com/watch?v=1EtXNUeBG8M">short introductory video</a> illustrating the devastating speed of wildfires driven by winds and flying embers.
-</p>
+                <p>Find out more about locations in the Wildland Urban Interface, review detailed landscape characteristics, historical weather patterns and more.</p>
+            <h2>Become a Firewise Community</h2>
+                <p>If you live in an at-risk area or WUI, becoming a Firewise Community makes a big difference in insuring your area is safer. Learn about other Firewise Communities, organize a Firewise Day, create a community action plan and more.
+                <br />
+                <br />
+                <a href="http://www.firewise.org/Communities/USA-Recognition-Program/Program-criteria.aspx">Get started here</a> on the five steps to becoming a Firewise community. For step 1, contact <a href="mailto:Josh.Portie@austintexas.gov">Austin Fire Department</a> or your <a href="http://submissions.nfpa.org/firewise/fw_state_liaisons.php">state liaison</a> if you're in a different area.</p>
         </div>
     </div><!--end column-full-->    
     <div class="column-full reg">
