--- a/app/views/layouts/about_layout.html.erb
+++ b/app/views/layouts/about_layout.html.erb
@@ -3,6 +3,7 @@
     <head>
     
       <title>Preparedly</title>
+      <meta name="viewport" content="width=device-width,initial-scale =1, user-scalable = no" />
       <%= stylesheet_link_tag    "application", :media => "all" %>
       <%= yield :stylesheet_yield %>
       <%= yield :fb_og_tags %>
