--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -9,19 +9,23 @@
     <%= render 'devise/menu/login_items' %>
     <li><%= link_to "about", about_path %></li>
 <% end %>
-<div id="map-main">
-  <div id="map-content-top">
-      <div id="address-map">
+<!--<div id="map-main">-->
+<!--  <div id="map-content-top">
+
+  </div>
+-->
+  <% if @coordinates %>
+  <div>
+    <div id="address-map">
         <%= form_tag("/map", :method=> "post") do%>
           <%= text_field_tag(:q, nil,  :value => @address_str, :class => 'address') %>
           <%= submit_tag("Locate", :class => 'blue button') %>
         <% end %>
-      </div>
-  </div>
-
-  <% if @coordinates %>
-  <div>
+    </div>
+      <!-- div that will display the map that is set using below javascript -->
+    <div id="map"></div>
     <div id="map-detail">
+
         <table id="table-map">
             <tr>
                 <th colspan="2">
@@ -48,10 +52,10 @@
                 <td class="condition-type">Humidity: </td>
                 <td class="condition"><%= @relative_humidity %></td>
             </tr>
-            <tr>
+<!--        <tr>
                 <td class="condition-type">Distance to fire station:</td>
                 <td class="condition"> <%= @distance %> miles</td>
-            </tr>
+            </tr> -->
             <tr>
                 <td class="condition-type">Inside of a Burn Ban:</td>
                 <td class="condition"> <%= @inside_burnban %></td>
@@ -69,9 +73,8 @@
       </table>
       </div>
     </div>
-    <!-- div that will display the map that is set using below javascript -->
-    <div id="map"></div>
-  </div>
+<!--
+  </div>-->
   <% else %>
   <div>Please enter a valid street address and try again.</div>
   <% end %>
