dry navbar, copy on homepage

--- a/app/views/layouts/about_layout.html.erb
+++ b/app/views/layouts/about_layout.html.erb
@@ -29,12 +29,18 @@
     </div>
             <p class="notice"><%= notice %></p>
             <p class="alert"><%= alert %></p>
-                <div class="nav-bar">
-                    <ul class="nav-bar-items">
-                        <%= yield :nav_bar_items %>
-                    </ul>
-                </div>
+<!-- Navgation -->
+            <div class="nav-bar">
+                <ul class="nav-bar-items">
+                    <!--NAVIGATION!-->
+					<%= render 'devise/menu/registration_items' %>
+					<%= render 'devise/menu/login_items' %>
+					<li><%= link_to "resources", resources_path %></li> 
+					<li><%= link_to "about", about_path %></li>
 
+                </ul>
+            </div>
+<!-- end Navgation -->
     <div id="about-green">
         <div id="about-wrap">
                     <div id="about-main">
