--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
         </div>
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
+<!-- Navgation -->
             <div class="nav-bar">
                 <ul class="nav-bar-items">
                     <!--NAVIGATION!-->
@@ -31,6 +32,8 @@
 
                 </ul>
             </div>
+<!-- end Navgation -->
+            
             <div id="logo-wrapper">
               <a href="/">
                 <div id="logo" title="preparedly">
