--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -2,9 +2,10 @@
 Contact AFD
 -->
 <div class="column-wrapper">   
-    <div class="column-full">
+    <div class="column-full reg">
         <h1>Learn</h1>
     </div><!--end column-full-->
+
     <div class="column-full reg">
        <div class="column reg">
             <h2>What is the <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">Wildland Urban Interface?</a></h2>
@@ -25,10 +26,13 @@ Contact AFD
                 <a href="http://www.firewise.org/Communities/USA-Recognition-Program/Program-criteria.aspx">Get started here</a> on the five steps to becoming a Firewise community. For step 1, contact <a href="mailto:Josh.Portie@austintexas.gov">Austin Fire Department</a> or your <a href="http://submissions.nfpa.org/firewise/fw_state_liaisons.php">state liaison</a> if you're in a different area.</p>
         </div>
     </div><!--end column-full-->    
+
     <div class="column-full reg">
+        <h1 id="nounderline">&nbsp;</h1>
         <h1>Alerts</h1>
-    </div> <!--end column-full-->
-    <div class="column-full">
+    </div><!--end column-full-->
+
+    <div class="column-full reg">
         <div class="column reg">
             <h2>Local Conditions</h2>
             <p>Prepared.ly is meant to help you remain proactive by sending periodic, unobstrusive notifications. Stay tuned for alerts from AFD when there is a high wildfire risk due to weather or other circumstances, and for reminders of simple ways to remain prepared. You can set your alert preferences <a href="http://www.prepared.ly/users/edit">here</a>.
