--- a/app/views/layouts/about_layout.html.erb
+++ b/app/views/layouts/about_layout.html.erb
@@ -7,6 +7,9 @@
       <%= stylesheet_link_tag    "application", :media => "all" %>
       <%= yield :stylesheet_yield %>
       <%= yield :fb_og_tags %>
+      <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 800px)" %>
+      <%= javascript_include_tag "application" %>
+    
       <%= csrf_meta_tags %>
       <!-- Google Analytics -->
         <script type="text/javascript">
