fix css comment

--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -8,7 +8,7 @@
  * Detailed information about this CSS: h5bp.com/css
  *
  * ==|== normalize ==========================================================
- */
+ *
  *= require_self
 */
 // They will automatically be included in application.css.
