--- a/app/views/devise/_links.erb
+++ b/app/views/devise/_links.erb
@@ -19,8 +19,17 @@
 <% end -%>
 
 <%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= provider_icon provider %>
-    <%= link_to "Sign in with #{provider.to_s.titleize}", user_omniauth_authorize_path(provider) %><br />
-  <% end -%>
+		
+	  <%- resource_class.omniauth_providers.each do |provider| %>
+	  	 <%- if (provider.to_s == "google_oauth2" ) %>
+				<%= provider_icon "google_oauth2" %>
+	    	<%= link_to "Sign in with Google", user_omniauth_authorize_path(provider) %><br />
+				<% next %>   
+			<% end -%>
+	    <%= provider_icon provider %>
+	    <%= link_to "Sign in with #{provider.to_s.titleize}", user_omniauth_authorize_path(provider) %><br />
+	   
+	  <% end -%>
+	  
+
 <% end -%>
