--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -8,10 +8,8 @@
             </br>
              <hr></hr>
              </br>
-            <h2><strong>Last Summer, over 1300 homes were destroyed in Bastrop County due to wildfire.</strong><br>
-            We don’t want that to happen to you. We’ve developed an easy-to-use application that brings 
-            together a variety of checklists and fire tools, and gives them to you in a manageable, timely, 
-            and actionable form.
+            <h2><strong>Last Summer, over 1300 homes were destroyed in Bastrop County due to wildfire.</strong><br />
+            We don’t want that to happen to you. We’ve developed an easy-to-use application that brings together a variety of checklists and fire tools, and gives them to you in a manageable, timely, and actionable form.
             </h2>
             </br>
 
