--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -32,7 +32,7 @@
             </tr>
             <tr>
         <% if @risk_level %>
-                  <td class="risk risk-<%= @risk_level %>"><%= @risk_text %><span class="trigger" data-tooltip="#riskTooltip"><img src="assets/question.png" /></span>
+                  <td class="risk risk-<%= @risk_level %>"><%= @risk_text %>&nbsp<span class="trigger" data-tooltip="#riskTooltip"><img src="assets/question.png" /></span>
                   </td>
                 <% else %>
                   <td class="risk">No risk data is available at this location</td>
@@ -78,6 +78,7 @@
   <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
   <script type="text/javascript" src="app/assets/javascripts/wax.leaflet.min.js"></script>
   <script type="text/javascript" src="app/assets/javascripts/cartodb-leaflet.js"></script>
+  <script type="text/javascript" src="app/assets/javascripts/tooltip.js"></script>
   <% if @coordinates %>
     <script type="text/javascript">
         $(document).ready(function() {
